fix z-index mobile problem

--- a/src/styles/sass/components/_project.scss
+++ b/src/styles/sass/components/_project.scss
@@ -48,9 +48,6 @@ $colorTextLightest: #789;
     width: $blockSize * 5;
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    z-index: 999;
-    transform: translateZ(0.01px);
-    -webkit-transform: translateZ(0.01px);
     pointer-events: none;
     img {
       height: 100%;
@@ -72,9 +69,6 @@ $colorTextLightest: #789;
     align-items: center;
     text-align: center;
     opacity: 0.85;
-    z-index: 999;
-    transform: translateZ(0.01px);
-    -webkit-transform: translateZ(0.01px);
     a {
       text-decoration: none;
     }
